test/errors/cpp_generator_error/zs/sql_table_reader_class_clash_error.zs
package sql_table_reader_class_clash_error;

sql_table Reader
{
    uint32 id sql "PRIMARY KEY NOT NULL";
};
